feat: 调整一些代码的方法