@@ -1,20 +1,19 @@
 package com.myhd.jinhuileadnewsutils.utils.common;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class Base64Utils {
 
     /**
      * 解码
+     *
      * @param base64
      * @return
      */
-    public static byte[] decode(String base64){
-        BASE64Decoder decoder = new BASE64Decoder();
+    public static byte[] decode(String base64) {
         try {
             // Base64解码
-            byte[] b = decoder.decodeBuffer(base64);
+            byte[] b = Base64.getDecoder().decode(base64);
             for (int i = 0; i < b.length; ++i) {
                 if (b[i] < 0) {// 调整异常数据
                     b[i] += 256;
@@ -29,12 +28,12 @@ public class Base64Utils {
 
     /**
      * 编码
+     *
      * @param data
      * @return
      * @throws Exception
      */
     public static String encode(byte[] data) {
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(data);
+        return Base64.getEncoder().encodeToString(data);
     }
 }
